--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "axios": "^1.6.5",
     "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
