--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@nextui-org/react": "^2.1.13",
     "axios": "^1.6.5",
     "framer-motion": "^10.16.4",
-    "next": "13.5.6",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0"
