--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.5",
     "framer-motion": "^11.0.8",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "react-query": "^3.39.3"
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
